[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/images/TitleScreenBG.png" type="Texture" id=1]
[ext_resource path="res://shaders/TextGradient.shader" type="Shader" id=2]
[ext_resource path="res://assets/fonts/RetGanon.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/Samton-CondensedBold.otf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/fonts/ReggaeOne-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://menu/Title/TitleMenu.gd" type="Script" id=6]
[ext_resource path="res://UI/Effects.tscn" type="PackedScene" id=7]

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 2 )
shader_param/intensity = 0.09
shader_param/x = null
shader_param/r_horizontal = null
shader_param/g_horizontal = null
shader_param/b_horizontal = null
shader_param/y = true
shader_param/r_vertical = 120.0
shader_param/g_vertical = 2.0
shader_param/b_vertical = 6.0

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="ShaderMaterial" id=10]
shader = ExtResource( 2 )
shader_param/intensity = 0.09
shader_param/x = null
shader_param/r_horizontal = null
shader_param/g_horizontal = null
shader_param/b_horizontal = null
shader_param/y = true
shader_param/r_vertical = 120.0
shader_param/g_vertical = 2.0
shader_param/b_vertical = 6.0

[sub_resource type="DynamicFont" id=7]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="ShaderMaterial" id=11]
shader = ExtResource( 2 )
shader_param/intensity = 0.09
shader_param/x = null
shader_param/r_horizontal = null
shader_param/g_horizontal = null
shader_param/b_horizontal = null
shader_param/y = true
shader_param/r_vertical = 120.0
shader_param/g_vertical = 2.0
shader_param/b_vertical = 6.0

[sub_resource type="DynamicFont" id=8]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="ShaderMaterial" id=12]
shader = ExtResource( 2 )
shader_param/intensity = 0.09
shader_param/x = false
shader_param/r_horizontal = null
shader_param/g_horizontal = 0.0
shader_param/b_horizontal = null
shader_param/y = true
shader_param/r_vertical = null
shader_param/g_vertical = 80.0
shader_param/b_vertical = null

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 76
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 38
font_data = ExtResource( 5 )

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/intensity = 0.09
shader_param/x = false
shader_param/r_horizontal = null
shader_param/g_horizontal = 0.0
shader_param/b_horizontal = 0.0
shader_param/y = true
shader_param/r_vertical = 120.0
shader_param/g_vertical = 2.0
shader_param/b_vertical = 6.0

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[node name="TitleMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Effects" parent="." instance=ExtResource( 7 )]

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -78.0
margin_top = -191.0
margin_right = 78.0

[node name="GameButton" type="Button" parent="VBoxContainer"]
material = SubResource( 9 )
margin_right = 156.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 6 )
text = "New Game"
flat = true
align = 0

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
material = SubResource( 10 )
margin_top = 65.0
margin_right = 156.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 7 )
text = "Options"
flat = true
align = 0

[node name="ExitButton" type="Button" parent="VBoxContainer"]
material = SubResource( 11 )
margin_top = 130.0
margin_right = 156.0
margin_bottom = 191.0
custom_fonts/font = SubResource( 8 )
text = "Exit"
flat = true
align = 0

[node name="AnyKey" type="Label" parent="."]
material = SubResource( 12 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -72.0
margin_right = 150.0
custom_fonts/font = SubResource( 3 )
text = "Press Any Key"
align = 1
valign = 1

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -132.0
margin_right = 132.0
margin_bottom = 193.0
custom_colors/font_color = Color( 0.941176, 0.972549, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Tamago
Calamity"
align = 1
valign = 1

[node name="SubTitle" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -47.0
margin_right = 151.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0.941176, 0.972549, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "ディエゴチキン"
align = 1
valign = 1

[node name="Credits" type="Button" parent="."]
material = SubResource( 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -25.0
custom_fonts/font = SubResource( 2 )
text = "Credits"
flat = true

[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
